2006-06-05  Matthias Clasen  <mclasen@redhat.com>

	* tests/strtod-test.c: Add some tests involving
	leading whitespace.

	* glib/gstrfuncs.c (g_ascii_formatd): Skip leading 
	whitespace.  (#343899, Øystein Johansen)

2006-06-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmain.h: 
	* glib/gmain.c: Add three new functions, 
	g_main_current_source, g_source_set_funcs and 
	g_source_is_destroyed, that will be necessary to 
	solve thread-safety issues with idles in GTK+.  
	(#321886, Chris Wilson)

2006-06-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/giochannel.c (g_io_channel_write_chars): Avoid
	running in an assertion with small writes.  (#343566, Chris
	Wilson)

	* tests/iochannel-test.c: Add a testcase for small writes.

	* glib/glib.symbols: 
	* glib/ghash.h: 
	* glib/ghash.c: Add g_hash_table_{remove,steal}_all to
	remove all nodes from a hash table.  (#168538, Matt Barnes)

2006-06-01  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gkeyfile.c (g_key_file_to_data),
	(g_key_file_parse_value_as_comment),
	(g_key_file_parse_comment_as_value):
	* glib/gscanner.c (g_scanner_get_token_ll): Cleanup. Use return
	value of g_string_free(...). (#343548, Chris Wilson)

2006-05-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c (g_markup_parse_context_parse): 
	Don't use g_str_has_{prefix,suffix} here.

2006-05-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.h: Add a GMarkupParseFlags flag for
	treating CDATA as text. 

	* glib/gmarkup.c (g_markup_parse_context_parse): 
	Implement it here.

2006-05-28  Matthias Clasen  <mclasen@redhat.com>

	* tests/markups/expected-*: Output that test-markup
	is expected to produce when run on the valid gmarkup 
	examples.

	* tests/markup-test.c: Only dump the results of the
	first, unchunked parse, to compare it against the expected
	output. 

	* tests/run-markup-tests.sh: For valid examples, compare
	the output of test-markup against the corresponding
	expected-<n> file.
	