@@ -1,5 +1,8 @@
 2006-06-05  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gmain.c (get_dispatch): Don't leak the
+	dispatch struct.  (#321886)
+
 	* tests/strtod-test.c: Add some tests involving
 	leading whitespace.
 
